# voice-meal-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  few-shots.md  init_workspace.sh  log.txt  main.py  mount_local.sh  nutrition_logger.py  pyproject.toml  requirements.txt  voice-meal-tracker.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
audio/: fetching.py  transcription.py
audio_input/: fetching.py  transcription.py
dagster_pipeline/: __init__.py  assets.py  custom_logger.py  partitions.py
encoding/: querying.py  segmentation.py
extract/: extract_vns.py  fetch_msgs.py  pyproject.toml  schemas.py  utils.py
fetching/: Dockerfile  Makefile  api.py  fetching.py  requirements.txt
fetching_service/: Dockerfile  Makefile  api_fetch.py
inference/: ner_inference.py  querying.py
legacy/: voice-meal-tracker.py
legacy/audio/: fetching.py
logging_/: idx_logging.sh  init_db.sh  log.txt  retrieval.py  simple_log.py
logs/: db_logging.py  retrieval.py
setup/: data_setup.py  model_setup.py
training_service/: Dockerfile  Makefile
training_service/kernel_files/: kernel-metadata.json
transcription_service/: Dockerfile  Makefile  api_transcribe.py  app_transcribe.py
utils/: utils.py
voicenotes/: Dockerfile  Makefile  __init__.py  api.py  build-docker.sh  create-docker-volume.sh  fetching.py  get_async_libs.sh  run-docker.sh
