[project]
name = "voice-meal-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.0",
    "dagster-webserver>=1.11.0",
    "fetching",
]

[project.optional-dependencies]
dev = [
    "kaggle>=1.7.4.5",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.uv.sources]
fetching = { path = "fetching" }

[tool.uv.workspace]
members = [
    "extract",
]

[tool.dagster]
module_name = "dagster_pipeline"

[tool.ruff]
line-length = 170
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "W291", # trailing whitespace
    "W292", # eof newline
    "I001", # organize imports
 ]
select = ["E", "W", "F", "I", "N", "PERF", "PL", "UP", "FURB", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_decorators = false
